force-app/main/default/objects/Picklist_Updater__c/Picklist_Updater__c.object-meta.xml
<CustomObject>
    <label>Picklist Updater</label>
    <nameField>
        <displayFormat>PU-{0000}</displayFormat>
        <label>Picklist Updater Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Picklist Updaters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>