force-app/main/default/objects/Picklist_Updater__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>Types of Action you want to perform.</description>
    <inlineHelpText>Select the Types of Action you want to perform.</inlineHelpText>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add Single Value</fullName>
            </value>
            <value>
                <fullName>Add Primary &amp; Dependent Field Values</fullName>
            </value>
            <value>
                <fullName>Deactivate Value</fullName>
            </value>
            <value>
                <fullName>Update Dependency Only (existing values)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>