force-app/main/default/objects/Picklist_Updater__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <inlineHelpText>Select the object name</inlineHelpText>
    <label>Object Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Main__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>