force-app/main/default/objects/Picklist_Updater__c/fields/Primary_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Field_Name__c</fullName>
    <label>Primary Field Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>