force-app/main/default/objects/Picklist_Updater__c/fields/Primary_Value__c.field-meta.xml
<CustomField>
    <fullName>Primary_Value__c</fullName>
    <label>Primary Field Value</label>
    <length>80</length>
    <type>Text</type>
</CustomField>