force-app/main/default/objects/Picklist_Updater__c/fields/Secondary_Values__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Values__c</fullName>
    <inlineHelpText>Add values for secondary picklist</inlineHelpText>
    <label>Dependent Field Values</label>
    <type>TextArea</type>
</CustomField>